--- a/style.css
+++ b/style.css
@@ -11,5 +11,60 @@
     right: 0;
 }
 
-/*Write your CSS rules below!*/
+hr {
+    border: 0;
+    height: 1px;
+    background: #333;
+    background-image: linear-gradient(to right, #ccc, #333, #ccc);
+}
 
+h1,
+h2 {
+    font-size: 72px;
+    font-family: "Oswald", "Helvetica Neue";
+    text-align: center;
+    color: #2884C3;
+}
+
+body {
+    font-size: 1.5em;
+    font-family: "Crimson Text","Arial";
+    line-height: 1.5;
+    background-color:red;
+}
+
+code {
+    color: #CE234C;
+    background-color: lightgray;
+}
+
+.snippet {
+    background: lightgray;
+}
+
+#font-practice {
+    font-family: "Arial";
+    color: green;
+    font-size: 16px;
+    font-style: italic;
+}
+
+a {
+    color: green;
+}
+
+a:hover {
+    color: red;
+}
+
+a:active {
+    color: blue;
+}
+
+a:visited {
+    color: black;
+}
+
+li {
+    color: green;
+}
